[tool.poetry]
name = "content-storage"
version = "0.1.0"
description = ""
authors = ["Pavel Drovnin <pavel98rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
pyjwt = "^2.10.1"
redis = "^5.2.1"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
py-bcrypt = "^0.4"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
